Implement cut photo score unlock
